--- a/templates/thread.html
+++ b/templates/thread.html
@@ -39,7 +39,8 @@
         <textarea spellcheck="false" name="content" rows="3", cols="40">{% if errors %}{{comment_content}}{% endif %}</textarea>
         <br>
         <input type="submit" value="Lähetä">
-        <input type="hidden" name="thread_id" value="{{ thread.id }}">
+        <input type="hidden" name="thread_id" value="{{thread.id}}">
+        <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
     </form>
     {% if errors %}
         {% for error in errors %}
